<resources>
    <string name="app_name">Progress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create">CreateActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string-array name="show_mode">
        <item>By Day</item>
        <item>By Week-Day</item>
        <item>By Month-Week-Day</item>
        <item>By Year-Month-Day</item>
        <item>By Year-Month-Week-Day</item>
    </string-array>

    <string name="counter_display_label">Counter Display Format</string>
    <string name="choose_color_label">Choose Counter Color</string>

    <!--    Create Fragment-->
    <string name="create_btn_txt">Create Counter</string>


    <string name="input_counter_name_error">Counter name can\'t be empty</string>

    <string name="counter_name_input_label">Counter Name</string>

    <string name="note_label">Note</string>

    <string name="cancel_label">Cancel</string>

    <string name="start_date_error_label">Start Date can\'t be empty!</string>

    <string name="count_down_chkbox_label">Make as countdown counter</string>

    <string name="color_error_label">Please select one color for counter</string>

    <string name="complete_label">COMPLETE</string>
    <!-- Preference Titles -->
    <string name="notification_header">Notification Setting</string>
    <string name="animation_header">Animation</string>
    <string name="misc_header">Others</string>

    <!--    Preferences Key-->
    <string name="pf_key_overallnoti">overall_noti_switch</string>
    <string name="pf_key_noti_style">noti_style_switch</string>
    <string name="pf_key_pbar_animation">progressbar_animation</string>
    <string name="pf_key_privacy">privacy_key</string>
    <string name="pf_key_about">about_key</string>
    <string name="pf_key_feedback">feedback_key</string>

    <!-- Notification Preferences -->
    <string name="notification_title">Notification</string>
    <string name="notification_summary">Turn on/off all the notification</string>
    <string name="default_noti_title">Notification Style</string>
    <string name="defautl_noti_summary">Use OS Default Notification Style</string>


    <!--    Animation Preferences-->
    <string name="animation_title">Animation</string>
    <string name="animation_summary">Glimmer animation on elapsed progressbar on/off</string>

    <!-- Others Preferences -->
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="about_title">About</string>
    <string name="feedback_title">Send feedback</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="progress_label">Progress</string>
    <string name="configure">Configure</string>

    <!--    SplashActivity-->
    <string name="splash_message">Loading your progress...</string>

    <!--    Dashboard-->
    <string name="dashboard_empty">Dashboard is empty. <br /> Tap the + button to create new progress.</string>
    <string name="archive_prompt_msg">"Archiving progress will disable related notification and widget," +
                                "Are you sure?"</string>

    <string name="notifcation_off_alert_msg">App overall notification is off, would you like to go app setting and turn on?</string>

    <!--    About-->
    <string name="about_love">Made with ❤ by Aero IT</string>

    <!--    Onboarding-->
    <string name="slide1_title">Welcome to Progress</string>
    <string name="slide1_description">The App that can track and remind the time for your important dates and events.</string>

    <string name="slide2_title">Homescreen Widget</string>
    <string name="slide2_description">Create and place any progress as widget on your homescreen not to miss your special dates.</string>

    <string name="slide3_title">Persistent Notifications</string>
    <string name="slide3_description">Create notification for your progress in default notification or app notification style.</string>

    <string name="slide4_title">Overall control for notification</string>
    <string name="slide4_description">One switch to enable or disable for all progress notifications</string>

    <string name="slide5_title">Support two kind of progress</string>
    <string name="slide5_description">For fixed period tracking and indeterminate time tracking</string>

</resources>