<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="overall_noti_switch"
            app:summary="@string/notification_summary"
            app:title="@string/notification_title" />

        <SwitchPreferenceCompat
            app:key="overall_noti_switch"
            app:summary="@string/defautl_noti_summary"
            app:title="@string/default_noti_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/animation_header">
        <SwitchPreferenceCompat
            app:key="animation_switch"
            app:title="@string/animation_title"
            app:summary="@string/animation_summary" />
    </PreferenceCategory>



    <PreferenceCategory app:title="@string/misc_header">
        <Preference
            app:key="privacy_policy"
            app:title="@string/privacy_policy_title" />
        <Preference
            app:key="about"
            app:title="@string/about_title" />


    </PreferenceCategory>

</PreferenceScreen>